landing page done

--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,162 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import "tailwindcss";
 
+:root{
+  font-family: 'PingARLT';
+  font-size: 14px;
+  background-color: #fff;
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+@theme {
+  --font-font-main: 'PingARLT';
+  --font-font-base: 14px;
+  --font-toastify-color-success: #baf3e5 !important;
+
+  --size-base: 1rem;
+  --size-md: 1.071rem;
+  --size-xm: 1.143rem;
+  --size-2xm: 1.214rem;
+  --size-3xm: 1.286rem;
+  --size-sm: 0.929rem;
+  --size-xs: 13px;
+  --size-2xs: 12px;
+  --size-3xs: 11px;
+  --size-lg: 1.429rem;
+  --size-xl: 1.571rem;
+  --size-2xl: 1.714rem;
+  --size-3xl: 1.857rem;
+
+  --shadow-md: 0 4px 6px 0 rgba(0, 0, 0, 0.12);
+  --shadow-sm: 0 2px 4px 0 rgba(0, 0, 0, 0.08);
+  --shadow-lg: 0 6px 8px 0 rgba(0, 0, 0, 0.16);
+  --shadow-xl: 0 8px 10px 0 rgba(0, 0, 0, 0.16);
+  --shadow-2xl: 0 10px 16px 0 rgba(0, 0, 0, 0.16);
+  --shadow-smooth: 0 6px 8px 0 rgba(0, 0, 0, 0.02);
+
+  --breakpoint-2xl: 1400px;
+  --breakpoint-xl: 1279px;
+  --breakpoint-lg: 1023px;
+  --breakpoint-md: 767px;
+  --breakpoint-sm: 639px;
+
+  --color-primary: hsl(189, 100%, 17%);
+  --color-primary-force: hsl(189, 100%, 18%);
+  --color-primary-100: hsl(189, 39%, 75%);
+  --color-primary-200: hsl(188, 38%, 66%);
+  --color-primary-300: hsl(188, 38%, 54%);
+  --color-primary-400: hsl(189, 50%, 41%);
+  --color-primary-500: hsl(189, 100%, 18%);
+  --color-primary-600: hsl(189, 100%, 15%);
+  --color-primary-700: hsl(189, 100%, 14%);
+
+  --color-secondary: hsl(166, 71%, 69%);
+  --color-secondary-100: hsl(166, 69%, 94%);
+  --color-secondary-200: hsl(166, 71%, 91%);
+  --color-secondary-300: hsl(167, 71%, 89%);
+  --color-secondary-400: hsl(166, 70%, 84%);
+  --color-secondary-500: hsl(166, 71%, 76%);
+  --color-secondary-600: hsl(166, 71%, 68%);
+  --color-secondary-700: hsl(166, 36%, 45%);
+
+  --color-success: hsl(157, 100%, 34%);
+  --color-success-100: hsl(158, 59%, 87%);
+  --color-success-200: hsl(157, 63%, 75%);
+  --color-success-300: hsl(157, 59%, 69%);
+  --color-success-400: hsl(157, 56%, 57%);
+  --color-success-500: hsl(157, 63%, 46%);
+  --color-success-600: hsl(157, 100%, 27%);
+  --color-success-700: hsl(157, 100%, 21%);
+
+  --color-info: hsl(214, 87%, 64%);
+  --color-info-100: hsl(215, 89%, 93%);
+  --color-info-200: hsl(214, 86%, 89%);
+  --color-info-300: hsl(214, 87%, 85%);
+  --color-info-400: hsl(215, 87%, 78%);
+  --color-info-500: hsl(214, 87%, 71%);
+  --color-info-600: hsl(215, 55%, 52%);
+  --color-info-700: hsl(214, 52%, 40%);
+
+  --color-warning: hsl(34, 100%, 63%);
+  --color-warning-100: hsl(34, 100%, 93%);
+  --color-warning-200: hsl(34, 100%, 89%);
+  --color-warning-300: hsl(34, 100%, 85%);
+  --color-warning-400: hsl(34, 100%, 78%);
+  --color-warning-500: hsl(34, 100%, 71%);
+  --color-warning-600: hsl(34, 63%, 52%);
+  --color-warning-700: hsl(34, 60%, 40%);
+
+  --color-danger: hsl(358, 89%, 64%);
+  --color-danger-100: hsl(358, 89%, 93%);
+  --color-danger-200: hsl(358, 89%, 89%);
+  --color-danger-300: hsl(357, 89%, 85%);
+  --color-danger-400: hsl(358, 89%, 78%);
+  --color-danger-500: hsl(358, 89%, 71%);
+  --color-danger-600: hsl(358, 56%, 52%);
+  --color-danger-700: hsl(358, 53%, 41%);
+
+  --color-mahally: hsl(11, 100%, 58%);
+  --color-mahally-100: hsl(11, 100%, 98%);
+  --color-mahally-200: hsl(11, 100%, 93%);
+  --color-mahally-300: hsl(11, 100%, 86%);
+  --color-mahally-400: hsl(11, 100%, 75%);
+  --color-mahally-500: hsl(11, 100%, 66%);
+  --color-mahally-600: hsl(11, 73%, 46%);
+  --color-mahally-700: hsl(11, 73%, 35%);
+
+  --color-gray: hsl(0, 0%, 73%);
+  --color-gray-100: hsl(0, 0%, 99%);
+  --color-gray-200: hsl(0, 0%, 97%);
+  --color-gray-250: hsl(0, 0%, 96%);
+  --color-gray-300: hsl(0, 0%, 93%);
+  --color-gray-400: hsl(0, 0%, 87%);
+
+  --color-dark: hsl(0, 0%, 20%);
+  --color-dark-100: hsl(0, 0%, 60%);
+  --color-dark-200: hsl(0, 0%, 40%);
+  --color-dark-300: hsl(0, 0%, 27%);
+
+  --color-white: hsl(0, 0%, 100%);
+  --color-white-100: hsl(0, 0%, 100%);
+  --color-white-200: hsl(0, 0%, 100%);
+  --color-white-300: hsl(0, 0%, 100%);
+  --color-black: hsl(0, 0%, 0%);
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+.dark {
+  --color-primary: hsl(166, 70%, 84%);
+  --color-primary-force: hsl(189, 100%, 18%);
+  --color-primary-100: hsl(210, 4%, 22%);
+  --color-primary-200: hsl(220, 3%, 17%);
+  --color-primary-300: hsl(228, 3%, 28%);
+  --color-primary-400: hsl(230, 4%, 33%);
+  --color-primary-500: hsl(0, 0%, 13%);
+  --color-primary-600: hsl(220, 3%, 17%);
+  --color-primary-700: hsl(225, 4%, 22%);
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+  --color-secondary: hsl(166, 70%, 84%);
+  --color-secondary-100: hsl(210, 4%, 22%);
+  --color-secondary-200: hsl(166, 71%, 91%);
+  --color-secondary-300: hsl(167, 71%, 89%);
+  --color-secondary-400: hsl(166, 71%, 76%);
+  --color-secondary-500: hsl(166, 71%, 76%);
+  --color-secondary-600: hsl(166, 71%, 69%);
+  --color-secondary-700: hsl(0, 0%, 87%);
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+  --color-gray: hsl(0, 0%, 73%);
+  --color-gray-100: hsl(210, 4%, 22%);
+  --color-gray-200: hsl(225, 4%, 20%);
+  --color-gray-250: hsl(225, 4%, 20%);
+  --color-gray-300: hsl(228, 3%, 28%);
+  --color-gray-400: hsl(0, 0%, 87%);
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  --color-dark: hsl(0, 0%, 90%);
+  --color-dark-100: hsl(0, 0%, 60%);
+  --color-dark-200: hsl(0, 0%, 70%);
+  --color-dark-300: hsl(0, 0%, 80%);
+
+  --color-white: hsl(0, 0%, 100%);
+  --color-white-100: hsl(220, 3%, 17%);
+  --color-white-200: hsl(220, 3%, 17%);
+  --color-white-300: hsl(220, 5%, 12%);
+  --color-black: hsl(0, 0%, 90%);
 }
